Update contact link to new email form page

--- a/index.html
+++ b/index.html
@@ -581,7 +581,7 @@ body {
             <i class="fa fa-bars"></i>&nbsp; More <span class="caret"></span>
           </a>
           <ul class="dropdown-menu">
-			<li><a href="https://alexandroshub.github.io/connect"><i class="fa fa-envelope"></i>&nbsp; Contact</a></li>
+			<li><a href="https://alexandroshub.github.io/emailform"><i class="fa fa-envelope"></i>&nbsp; Contact</a></li>
             <li><a href="https://alexandroshub.github.io/mycv"><i class="fa fa-id-card"></i>&nbsp; My CV</a></li>
             <li><a href="https://alexandroshub.github.io/projects.html"><i class="fa fa-folder-open"></i>&nbsp; Portfolio</a></li>
             <li><a href="https://alexandroshub.github.io/plus.ap.html"><i class="fa fa-plus-circle"></i>&nbsp; Plus +</a></li>
@@ -2042,7 +2042,7 @@ background: linear-gradient(90deg, #2196f3, #4caf50); -webkit-background-clip: t
                         <span class="footer-subtitle" style=" background: linear-gradient(90deg, #2196f3, #4caf50); -webkit-background-clip: text; -webkit-text-fill-color: transparent;">Connect. Code. Create</span><br><br>
                     </div>
 
-                <p class="footer-copy">  <a href="https://alexandroshub.github.io/welcome21.html" title="Visit AlexandrosHub">▞▚ ▛ AlexandrosHub</a> | <a href="https://alexandroshub.github.io/about">Privacy Statement & Terms of Use</a> | <a href="https://alexandroshub.github.io/ap.contact.html">Contact</a> | <a href=" https://www.instagram.com/alexandroshub/ " style="background: linear-gradient(90deg, #2196f3, #4caf50); -webkit-background-clip: text; -webkit-text-fill-color: transparent; font-weight: 900;"><b><i class="fa fa-instagram w3-hover"></i></b></a></p>          
+                <p class="footer-copy">  <a href="https://alexandroshub.github.io/welcome21.html" title="Visit AlexandrosHub">▞▚ ▛ AlexandrosHub</a> | <a href="https://alexandroshub.github.io/about">Privacy Statement & Terms of Use</a> | <a href="https://alexandroshub.github.io/emailform.html">Contact</a> | <a href=" https://www.instagram.com/alexandroshub/ " style="background: linear-gradient(90deg, #2196f3, #4caf50); -webkit-background-clip: text; -webkit-text-fill-color: transparent; font-weight: 900;"><b><i class="fa fa-instagram w3-hover"></i></b></a></p>          
                   
  </div>
 </footer>
