Add mental health resource links to plus.ap.html
Added new links to mental health resources and articles.

--- a/plus.ap.html
+++ b/plus.ap.html
@@ -1,7 +1,4 @@
 
-
-
-
 <!--========================================================================== 
       ▞▚ ▙▄ ▛ █▬█ ▞▚  ▛ █ 
 
@@ -706,6 +703,16 @@ function closeFullscreen() {
     <li><a href="https://mariamanganari.gr/οδηγός-mindfulness-για-αρχάριους-το-τι-το-πώς-κα/">Οδηγός Mindfulness</a> – Greek guide for mindfulness beginners</li>
     <li><a href="https://www.zencenterathens.com">Zen Center Athens</a> – Meditation and Zen practice in Athens</li>
     <li><a href="https://www.mindfulness360.net/">Mindfulness360</a> – Holistic mindfulness resources</li>
+<li><a href="https://psychologynet.gr/">Psychologynet</a> – Articles and resources on psychology, mental health, and therapy in Greek</li>
+<li><a href="https://psychology.net.gr/">Psychology.net.gr</a> – Counseling and psychotherapy services by psychologist Katerina Kallitsi</li>
+<li><a href="https://psyhealth.ch/english/mental-health/">PsyHealth Switzerland</a> – Mental health support and resources for English-speaking expats in Switzerland</li>
+<li><a href="https://kalimeristherapist.com">Kalimeris Therapist</a> – Psychiatric diagnosis and treatment by Dr. Spyros Kalimeris in Athens</li>
+<li><a href="https://www.lundbeck.com/gr/stories">Lundbeck Greece Stories</a> – Real-life stories and insights on brain health and mental illness from patients and caregivers</li>
+<li><a href="https://www.osho.com/">OSHO</a> – Transformative meditation practices and teachings from Osho, including online courses and a meditation resort</li>
+<li><a href="https://www.psychologynow.gr/">PsychologyNow.gr</a> – Leading Greek site for psychology and mental health news, articles, and educational resources</li>
+<li><a href="https://www.psychografimata.com/">Ψυχο-γραφήματα</a> – Greek online psychology magazine offering articles, interviews, and therapeutic insights for the public</li>
+<li><a href="https://www.hiwellapp.com/el/blog">Hiwell Blog</a> – Mental health blog with expert-written articles on therapy, emotional wellness, and psychological techniques</li>
+
   </ul>
 
   <h3>🥗 Wellness & Nutrition</h3>
