Update navigation and add Digital Hub section

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 
 
+
 <!--==========================================================================
 
 	  ▞▚ ▙▄ ▛ █▬█ ▞▚ ▛ █  ғʀᴏᴍ ɪᴅᴇᴀ ᴛᴏ ᴀᴜᴛᴏᴍᴀᴛɪᴏɴ ᴀɴᴅ ʙᴇʏᴏɴᴅ
@@ -573,7 +574,7 @@ body {
       <ul class="nav navbar-nav navbar-right">
 		  <li><a href="#about"><i class="fa fa-th-large"></i>&nbsp;  About</a></li>
           <li><a href="#portf"><i class="fa fa-folder-open"></i>&nbsp;  Projects</a></li> 
-          <li><a href="#plus"><i class="fa fa-plus-square"></i>&nbsp; Plus</a></li>   
+          <li><a href="#plus"><i class="fa fa-plus-square"></i>&nbsp; Hub</a></li>   
 
   
         <li class="dropdown">
@@ -584,11 +585,11 @@ body {
 			<li><a href="https://alexandroshub.github.io/emailform"><i class="fa fa-envelope"></i>&nbsp; Contact</a></li>
             <li><a href="https://alexandroshub.github.io/mycv"><i class="fa fa-id-card"></i>&nbsp; My CV</a></li>
             <li><a href="https://alexandroshub.github.io/projects.html"><i class="fa fa-folder-open"></i>&nbsp; Portfolio</a></li>
-            <li><a href="https://alexandroshub.github.io/plus.ap.html"><i class="fa fa-plus-circle"></i>&nbsp; Plus +</a></li>
+            <li><a href="https://alexandroshub.github.io/plus.ap.html"><i class="fa fa-plus-circle"></i>&nbsp; Digital Hub</a></li>
             <li class="divider"></li>
             <li class="dropdown-header">Automations</li>
             <li><a href="https://alexandroshub.github.io/iot.html"><i class="fa fa-wifi"></i>&nbsp; IoT</a></li>
-<li><a href="https://alexandroshub.github.io/iot.html"><i class="fa fa-android"></i>&nbsp; Robotics</a></li>
+<li><a href="https://alexandroshub.github.io/robotics.html"><i class="fa fa-android"></i>&nbsp; Robotics</a></li>
             <li><a href="https://alexandroshub.github.io/ai.html">   <i class="fa fa-cogs"></i>&nbsp; AI</a></li>
             <li><a href="https://alexandroshub.github.io/ardu22.html"><i class="fa fa-microchip"></i>&nbsp; Arduino</a></li>
             <li><a href="https://alexandroshub.github.io/raspberrypi"><i class="fa  fa-microchip"></i>&nbsp; Raspberry Pi</a></li>
@@ -1118,7 +1119,7 @@ function topFunction() {
     <div class="gcse-search"></div>
   </div>
 
-
+<!--
 <section class="innovation-hero">
   <h2>Innovation Pipeline: From Vision to Deployment</h2>
   <p class="hero-subtitle">A streamlined process for building intelligent systems, smart devices, and scalable applications.</p>
@@ -1229,7 +1230,7 @@ function topFunction() {
       max-width: 320px;
     }
   }
-</style>
+</style> -->
 
   <div class="about-section">
  <center>
@@ -1731,62 +1732,132 @@ har {
 ─██░░██──██░░██─██░░██───────────────────────────
 ─██████──██████─██████───────────────────────────
 ─────────────────────────────────────────────────
---> <p id="plus"><br><br></p>
-<h1 class="title"><span class="gradient-text">enjoy AP PLUS </span></h1>
-<section style="max-width:900px;margin:2rem auto 3rem auto;padding:0 1.5rem;font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; color:#20435c; background:#f4f9f9; border-radius:8px; box-shadow:0 4px 10px rgba(46,148,185,0.2);">
-
-  <br><header style="background:linear-gradient(135deg, #2d7a69, #2e94b9); color:#ffffff; padding:2rem 1rem; text-align:center; border-radius:8px 8px 0 0; box-shadow:0 4px 10px rgba(46,148,185,0.3);">
-    <h1 style="font-size:2.4rem; margin:0 0 0.3rem 0;">PLUS – Η Ψηφιακή Γωνιά Τεχνολογικής Έμπνευσης 🚀</h1>
-    <p style="font-size:1.1rem; font-weight:600; margin:0;">Καλωσόρισες στην ενότητα <strong>PLUS</strong> του AlexandrosHub – το πιο ζωντανό σημείο συνάντησης για τους λάτρεις της τεχνολογίας!</p>
-  </header>
-
-  <main>
-    <h2 style="color:#2d7a69; border-bottom:3px solid #2d7a69; padding-bottom:0.3rem; margin-top:2rem;">Τι θα βρεις στο PLUS;</h2>
-    <ul style="list-style:none; padding-left:0; margin:1rem 0 2rem 0;">
+--> <!-- Promo Section -->
+<div class="promo-wrapper" id="plus"><br>
+  <section class="promo-box">
+    <img src="https://stelo.ai/images/gif.gif" alt="Προώθηση άρθρου" class="promo-image">
+    <div class="promo-content">
+<h1 class="title"><span class="gradient-text">AlphaPi Digital Hub</span></h1>
+      <h2>🚀 Η Ψηφιακή Γωνιά Τεχνολογικής Έμπνευσης </h2>
+  <ul style="list-style:none; padding-left:0; margin:1rem 0 2rem 0;">
       <li style="background:#e0f0f6; border-left:5px solid #2d7a69; margin-bottom:1rem; padding:1rem 1.2rem; border-radius:5px; font-size:1rem; line-height:1.4;">
         <span style="font-size:1.3rem; margin-right:0.5rem; vertical-align:middle;">📝</span><strong> Blogs &amp; Insightful Articles:</strong> Πρωτότυπα άρθρα, αναλύσεις και guides γύρω από automation, IoT, ρομποτική και τεχνολογικά trends.
 <br><span style="font-size:1.3rem; margin-right:0.5rem; vertical-align:middle;">🎥</span><strong> Tech Videos &amp; Reviews:</strong> Video με reviews gadgets, tutorials hardware/software και “how it’s made” ιστορίες.
 <br><span style="font-size:1.3rem; margin-right:0.5rem; vertical-align:middle;">🎙️</span><strong> Podcast Discoveries:</strong> Podcasts για IoT, ρομποτική και τεχνολογικά νέα με συζητήσεις και συνεντεύξεις.
 <br><span style="font-size:1.3rem; margin-right:0.5rem; vertical-align:middle;">✨</span><strong> Extra Bits:</strong> Προτάσεις eBooks, event recaps, resources και εκπλήξεις για εξερεύνηση του ψηφιακού κόσμου.
       </li>
-    </ul>
-<!--
-    <h2 style="color:#2d7a69; border-bottom:3px solid #2d7a69; padding-bottom:0.3rem; margin-top:2rem;">Γιατί αξίζει να μπεις στο PLUS;</h2>
-    <ul style="list-style:none; padding-left:0; margin:1rem 0 2rem 0;">
-      <li style="background:#e0f0f6; border-left:5px solid #2d7a69; margin-bottom:1rem; padding:1rem 1.2rem; border-radius:5px; font-size:1rem; line-height:1.4;">
-        <span style="font-size:1.3rem; margin-right:0.5rem; vertical-align:middle;">📈</span><strong> Ενημέρωση που σε αναβαθμίζει:</strong> Γίνε πάντα μπροστά στα νέα digital trends & smart hacks!
-      </li>
-      <li style="background:#e0f0f6; border-left:5px solid #2d7a69; margin-bottom:1rem; padding:1rem 1.2rem; border-radius:5px; font-size:1rem; line-height:1.4;">
-        <span style="font-size:1.3rem; margin-right:0.5rem; vertical-align:middle;">💬</span><strong> Διαδραστικότητα &amp; Feedback:</strong> Σχολίασε, πάρε μέρος σε quizzes, polls, challenges – η γνώμη σου μετράει!
-      </li>
-      <li style="background:#e0f0f6; border-left:5px solid #2d7a69; margin-bottom:1rem; padding:1rem 1.2rem; border-radius:5px; font-size:1rem; line-height:1.4;">
-        <span style="font-size:1.3rem; margin-right:0.5rem; vertical-align:middle;">🌟</span><strong> Εμπειρία Next-Level:</strong> Περιεχόμενο από creators για creators &amp; tech-lovers, με αυθεντικότητα και πάθος.
-      </li>
-    </ul>
-
-    <h2 style="color:#2d7a69; border-bottom:3px solid #2d7a69; padding-bottom:0.3rem; margin-top:2rem;">Θέλεις να γίνεις μέλος της τεχνολογικής κοινότητας;</h2> 
-    <p style="font-weight:700; margin-top:1rem;">
-      📢 <strong>Διάβασε – Άκου – Δες – Συμμετείχε!</strong>
-    </p> -->
-    <p style="font-weight:700;">
-      💥 Κάνε το scroll σου μέσα από το PLUS και νιώσε μαζί μου τον παλμό της καινοτομίας!
-    </p>
-    <p style="font-style:italic; margin-top:1rem;">
+    </ul>     
+ <p style="font-style:italic; margin-top:1rem;">
       🔗 Ανακάλυψε ακόμα περισσότερα στο
-      <a href="https://alexandroshub.wordpress.com/" target="_blank" style="color:#2e94b9; font-weight:700; text-decoration:none;">Wordpress Blog</a>,
-      στο
-      <a href="https://medium.com/@papaspyrou.alexandros" target="_blank" style="color:#2e94b9; font-weight:700; text-decoration:none;">Medium</a>
+      <a href="https://alexandroshub.wordpress.com/" target="_blank" style="color:#2e94b9; font-weight:700; text-decoration:none;">Wordpress Blog</a>, στο <a href="https://medium.com/@papaspyrou.alexandros" target="_blank" style="color:#2e94b9; font-weight:700; text-decoration:none;">Medium</a>
       και μείνε συντονισμένος για νέα 
       <a href="https://anchor.fm/alexandroshub" target="_blank" style="color:#2e94b9; font-weight:700; text-decoration:none;">podcasts</a>
-       &amp; videos!    </p>
-    <blockquote style="background:#d9f0f7; border-left:4px solid #2d7a69; margin:2rem 0; padding:1rem 1.2rem; font-style:italic; color:#143642; border-radius:4px;">
-      “Εδώ η τεχνολογία δεν είναι μόνο εργαλείο, αλλά έμπνευση, επικοινωνία, και ψυχαγωγία.”
-    </blockquote>
-    <p role="button" tabindex="0" onclick="window.open('https://alexandroshub.github.io/enjoyplus', '_blank')" style="font-weight:700; font-size:1.1rem; text-align:center; background:linear-gradient(90deg,#2d7a69,#2e94b9); color:#fff; padding:1rem 0; border-radius:8px; box-shadow:0 4px 10px rgba(46,148,185,0.3); user-select:none; cursor:pointer;">
-      ➡️ Επισκέψου το <strong>PLUS</strong> και ξεκίνα το ταξίδι σου στη γνώση τώρα!
-    </p> <br>
-  </main>
-</section>
+       &amp; videos!    </p>    
+    <a href="https://alexandroshub.github.io/plus.ap.html" class="promo-button">Επισκέψου το <strong>Digital Hub</strong> και ξεκίνα το ταξίδι σου</a>
+    </div>
+  </section>   <br><br>
+  <div  id="contact" class="bgimg-3"><span class="border" style="font-size:23px;color: #2d2d30;"> <span p style="  font-family: 'Inter', sans-serif;
+background: linear-gradient(90deg, #2196f3, #4caf50); -webkit-background-clip: text; -webkit-text-fill-color: transparent; font-weight: 700;">&nbsp; LETS GET IN TOUCH: </span> <a href=" https://www.instagram.com/alexandroshub/ " style="background: linear-gradient(90deg, #2196f3, #4caf50); -webkit-background-clip: text; -webkit-text-fill-color: transparent; font-weight: 900;"><b><i class="fa fa-instagram w3-hover"></i></b></a>
+</span></div>
+
+</div>
+
+<style>
+.promo-wrapper {
+  background-color: #f0f2f5;
+  padding: 40px 20px;
+  font-family: Arial, sans-serif;
+}
+
+/* Εσωτερικό promo πλαίσιο */
+.promo-box {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  background-color: #fff;
+  border: 2px solid #ddd;
+  border-radius: 10px;
+  padding: 20px;
+  max-width: 900px;
+  margin: 0 auto;
+  box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+}
+
+.promo-image {
+  width: 280px;
+  height: auto;
+  border-radius: 8px;
+  margin-right: 25px;
+}
+
+.promo-content {
+  flex: 1;
+}
+
+.promo-content h2 {
+  font-size: 1.8em;
+  margin-bottom: 10px;
+  color: #222;
+}
+
+.promo-content p {
+  font-size: 1em;
+  margin-bottom: 20px;
+  color: #555;
+}
+
+.promo-button {
+  display: inline-block;
+  padding: 12px 24px;
+  background: linear-gradient(to right, #1e9bff, #00d4aa);
+  color: white;
+  text-decoration: none;
+  border-radius: 6px;
+  font-weight: bold;
+  font-size: 1em;
+  transition: opacity 0.3s ease;
+}
+
+.promo-button:hover {
+  opacity: 0.85;
+}
+
+@media (max-width: 768px) {
+  .promo-box {
+    flex-direction: column;
+    text-align: center;
+  }
+
+  .promo-image {
+    margin: 0 0 20px 0;
+    width: 100%;
+    max-width: 400px;
+  }
+}
+</style>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
  </div>
 <!--
 <div style="color: #525252;background-color:white;text-align:center;padding:50px 80px;text-align: justify;">
@@ -2025,15 +2096,7 @@ function showSlides(n) {
 
 
 
-<div  id="contact" class="bgimg-3"><span class="border" style="font-size:23px;color: #2d2d30;"> 
 
-<span p style="  font-family: 'Inter', sans-serif;
-background: linear-gradient(90deg, #2196f3, #4caf50); -webkit-background-clip: text; -webkit-text-fill-color: transparent; font-weight: 700;">&nbsp; LETS GET IN TOUCH: </span>
-
-
-
-<a href=" https://www.instagram.com/alexandroshub/ " style="background: linear-gradient(90deg, #2196f3, #4caf50); -webkit-background-clip: text; -webkit-text-fill-color: transparent; font-weight: 900;"><b><i class="fa fa-instagram w3-hover"></i></b></a>
-</span></div>
 	 <footer class="footer">
  <div class="footer-bg">
                     <div>
