Update link in index.html to point to projects page

--- a/index.html
+++ b/index.html
@@ -1623,7 +1623,7 @@ har {
  <center>
  
 
-<a href="https://alexandroshub.github.io/plus.ap.html" class="promo-button">Δές τα στο <strong>Portfolio Hub</strong> και εμπνεύσου</a>
+<a href="https://alexandroshub.github.io/projects.html" class="promo-button">Δές τα στο <strong>Portfolio Hub</strong> και εμπνεύσου</a>
 
 <!--
  <style>
