Integrate Hotjar and Userway scripts
Added Hotjar tracking code and Userway accessibility widget.

--- a/index.html
+++ b/index.html
@@ -2135,3 +2135,94 @@ $(document).ready(function(){
 
 </body>
 </html>
+
+
+  <!--
+    _                                                                    
+    |_) _. ._   _.  _ ._     ._ _         /\  |  _      _. ._   _| ._ _   _ 
+    |  (_| |_) (_| _> |_) \/ | (_) |_|   /--\ | (/_ >< (_| | | (_| | (_) _> 
+          |          |   /                                                         
+   
+
+FUtuRE APPS
+-->
+
+
+
+
+
+
+
+<!-- Hotjar Tracking Code for https://alexandroshub.github.io/ -->
+<script>
+    (function(h,o,t,j,a,r){
+        h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
+        h._hjSettings={hjid:1806578,hjsv:6};
+        a=o.getElementsByTagName('head')[0];
+        r=o.createElement('script');r.async=1;
+        r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
+        a.appendChild(r);
+    })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
+</script>
+
+  <script type="text/javascript">
+            var _userway_config = {
+              /* uncomment the following line to override default position*/
+               position: '5',
+              /* uncomment the following line to override default size (values: small, large)*/
+               size: 'small', 
+              /* uncomment the following line to override default language (e.g., fr, de, es, he, nl, etc.)*/
+              /* language: 'null', */
+              /* uncomment the following line to override color set via widget (e.g., #053f67)*/
+              /* color: '#FF9900', */
+              /* uncomment the following line to override type set via widget (1=person, 2=chair, 3=eye, 4=text)*/
+              /* type: '1', */
+              /* uncomment the following lines to override the accessibility statement*/
+              /* statement_text: "Our Accessibility Statement", */
+              /* statement_url: "http://www.example.com/accessibility", */
+              /* uncomment the following line to override support on mobile devices*/
+              /* mobile: true, */
+              account: 'DGyOCjFW42'
+            };
+          </script>
+          <script type="text/javascript" src="https://cdn.userway.org/widget.js"></script>
+          <style>
+            .accordion2 {
+            background-color: #eee;
+            color: #444;
+            cursor: pointer;
+            padding: 18px;
+            width: 100%;
+            border: none;
+            text-align: left;
+            outline: none;
+            font-size: 15px;
+            transition: 0.4s;
+            }
+            .accordion2:after {
+            content: '\002B';
+            color: #777;
+            font-weight: bold;
+            float: right;
+            margin-left: 5px;
+
+            }
+            .active2:after {
+            content: "\2212";
+            }
+            .active2, .accordion2:hover {
+            background-color: #ccc;
+
+            }
+            .panel {
+            padding: 0 18px;
+            background-color: white;
+            max-height: 0;
+            overflow: hidden;
+            transition: max-height 0.2s ease-out;
+            }
+          </style>
+          
+          <!-- Appzi: Capture Insightful Feedback -->
+<script async src="https://w.appzi.io/w.js?token=g7Yon"></script>
+<!-- End Appzi -->
