Add link to new UI with styling
Added a new link to the UI with custom styles.

--- a/index.html
+++ b/index.html
@@ -735,8 +735,21 @@ function closeSearch() {document.getElementById("myOverlay").style.display = "no
     <h1>Smart IoT Automations &more</h1>
     <p>Personal website of Pᴀᴘᴀsᴘʏʀᴏᴜ Aʟᴇxᴀɴᴅʀᴏs.</p>
 
- <!--   <p>Harness the power of Arduino to create intelligent, automated environments.</p>
-    <button class="iot-btn">Get Started</button> -->
+
+<a href="https://alexandroshub.github.io/LV3" 
+style="
+display:inline-block;
+font-size:1.5rem;
+font-weight:700;
+background: linear-gradient(135deg, #ef8c35, #da2749, #bd1885);
+color:#fff;
+padding:14px 24px;
+border-radius:12px;
+text-decoration:none;
+box-shadow: 0 4px 12px rgba(218,39,73,0.3); 
+transition: transform 0.3s ease, 
+box-shadow 0.3s ease;
+"onmouseover="this.style.transform='scale(1.05)'; this.style.boxShadow='0 6px 16px rgba(218,39,73,0.4)'"onmouseout="this.style.transform='scale(1)'; this.style.boxShadow='0 4px 12px rgba(218,39,73,0.3)'" > Δες τo new UI </a>
   </div>
 </div>
 <!-- End Smart IoT Automations Block -->
