--- a/LV3.html
+++ b/LV3.html
@@ -2948,27 +2948,22 @@ background: linear-gradient(90deg, #2196f3, #4caf50); -webkit-background-clip: t
 </style>
 
  </div>
- 
- 
- 
 <!--
 ▄▀█ █░░ █▀█ █░█ ▄▀█   █▀█ █
 █▀█ █▄▄ █▀▀ █▀█ █▀█   █▀▀ █
 -->
-
-	 <footer class="footer">
-
+<footer class="footer">
 
  <div class="footer-bg">
                     <div>
-                         <link href='https://fonts.googleapis.com/css?family=Audiowide' rel='stylesheet'><h1 class="footer-title" style="font-family: 'Audiowide';text-decoration: none;color:white;">AlphaPi</h1>
-                           
-                        <span class="footer-subtitle" style=" background: linear-gradient(90deg, #2196f3, #4caf50); -webkit-background-clip: text; -webkit-text-fill-color: transparent;">Connect. Code. Create</span><br><br>
+<link href='https://fonts.googleapis.com/css?family=Audiowide' rel='stylesheet'><h1 class="footer-title" style="font-family: 'Audiowide';text-decoration: none;color:white;">AlphaPi</h1>
+<span class="footer-subtitle" style=" background: linear-gradient(90deg, #2196f3, #4caf50); -webkit-background-clip: text; -webkit-text-fill-color: transparent;">Connect. Code. Create</span><br><br>
                     </div>
-
-                <p class="footer-copy">  <a href="https://alexandroshub.github.io/welcome21.html" title="Visit AlexandrosHub">▞▚ ▛ AlexandrosHub</a> | <a href="https://alexandroshub.github.io/about">Privacy Statement & Terms of Use</a> | <a href="https://alexandroshub.github.io/emailform.html">Contact</a> | <a href=" https://www.instagram.com/alexandroshub/ " style="background: linear-gradient(90deg, #2196f3, #4caf50); -webkit-background-clip: text; -webkit-text-fill-color: transparent; font-weight: 900;"><b><i class="fa fa-instagram w3-hover"></i></b></a></p>          
+<p class="footer-copy">  <a href="https://alexandroshub.github.io/welcome21.html" title="Visit AlexandrosHub">▞▚ ▛ AlexandrosHub</a> | <a href="https://alexandroshub.github.io/about">Privacy Statement & Terms of Use</a> | <a href="https://alexandroshub.github.io/emailform.html">Contact</a> | <a href=" https://www.instagram.com/alexandroshub/ " style="background: linear-gradient(90deg, #2196f3, #4caf50); -webkit-background-clip: text; -webkit-text-fill-color: transparent; font-weight: 900;"><b><i class="fa fa-instagram w3-hover"></i></b></a></p>          
                   
- </div>
+ </div><br>
+<!-- <img src= "https://78.media.tumblr.com/e3d4fac4931e6e1df6b3b85d53dae92b/tumblr_p0sxo3UYRB1si59zfo1_1280.png" style="width:300px;" alt="Papaspyrou Alexandros" align="bottom">
+ <p class="w3-tooltip"> .<br><span class="w3-text"><a href="#top"><i class="fa fa-chevron-circle-up w3-margin-right"></i>Επιστροφή στην κορυφή</a></span><br></p>-->
 </footer>
 
 <style>
