Update footer and page title in plus.ap.html

--- a/plus.ap.html
+++ b/plus.ap.html
@@ -1,8 +1,7 @@
-
 <!--========================================================================== 
       ▞▚ ▙▄ ▛ █▬█ ▞▚  ▛ █ 
 
-     SpecialPage ᖰ𝘭υ⟆ Updated:15.9.25 
+     SpecialPage ᖰ𝘭υ⟆🚀 Updated:15.11.25 
      Welcome in my personal website 100% HTML |  Hosted by Github
      Handcrafted With ❤ (CC)-By: Pᴀᴘᴀsᴘʏʀᴏᴜ Aʟᴇxᴀɴᴅʀᴏs ॐ ☯ ☸
      🅐🅛🅔🅧🅐🅝🅓🅡🅞🅢 🅗🅤🅑  
@@ -16,7 +15,7 @@
   
 <!DOCTYPE html>
 <html>
- <title>𝗔𝗹𝗽𝗵𝗮𝗣𝗶 ᖰ𝘭υ⟆  🚀 </title>
+ <title>𝗔𝗹𝗽𝗵𝗮𝗣𝗶 hub+ </title>
   <link rel="icon" href="https://64.media.tumblr.com/9afce4a8d742ee60acbad9323d33dc5d/44cd2a580847b444-aa/s540x810/e1584500e44e11d32058f0df0cf743b29b3468f3.pnj" type="image/png">
   <!--  /////// meta information  /////// -->
   <meta charset="UTF-8">
@@ -404,6 +403,58 @@ function closeFullscreen() {
 }
 </script>
 
+
+
+
+
+<style>
+
+/* Video styling */
+.frames-video {
+  width: 100%;
+  max-width: 960px; /* adjust to fit your layout */
+  margin: 0 auto;
+}
+
+.frames-video__wrapper {
+  position: relative;
+  padding-bottom: 56.25%; /* 16:9 aspect ratio */
+  height: 0;
+  overflow: hidden;
+  border-radius: 12px; /* optional rounded corners */
+  box-shadow: 0 8px 24px rgba(0,0,0,0.25); /* subtle depth */
+}
+
+.frames-video__wrapper iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border: none;
+}
+
+
+</style>
+
+<!-- Video Embed -->
+<div class="frames-video">
+  <div class="frames-video__wrapper">
+    <iframe 
+      src="https://www.youtube.com/embed/e9dZQelULDk" 
+      title="YouTube video player"
+      frameborder="0"
+      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+      allowfullscreen>
+    </iframe>
+  </div>
+</div>
+
+
+
+
+
+
    
    </div>
   <!--
@@ -417,21 +468,21 @@ function closeFullscreen() {
      <hqr style="width:200px" class="w3-opacity"></hqr> 
 
    <div class="w3-row-padding" style="margin:0 -16px">
-   
+ <!--  
 <button class="accordion2">CINEMA</button>
 <div class="panel">
  <div class="container">
 
-<!-- CINEMA SECTION -->
+<!-- CINEMA SECTION -- >
 <section style="max-width: 1000px; margin: 60px auto; font-family: 'Orbitron', sans-serif; color: #e0e0e0;">
   <h2 style="text-align:center; color:#FF5733;">AlexandrosHub <i>CINEMA</i></h2>
 
-  <!-- Embedded Player -->
+  <!-- Embedded Player -- >
   <div style="margin-bottom: 2rem;">
     <iframe id="cinemaPlayer" width="100%" height="400" src="https://www.youtube.com/embed/4yBrW0zG8y8" frameborder="0" allowfullscreen></iframe>
   </div>
 
-  <!-- Video Buttons -->
+  <!-- Video Buttons -- >
   <div style="display: flex; flex-direction: column; gap: 1rem;">
     <button onclick="loadCinema('https://www.youtube.com/embed/4yBrW0zG8y8')" class="cinema-btn">🎬 Happiness</button>
     <button onclick="loadCinema('https://www.youtube.com/embed/e9dZQelULDk')" class="cinema-btn">🎬 Are You Lost In The World Like Me</button>
@@ -444,14 +495,14 @@ function closeFullscreen() {
   </div>
 </section>
 
-<!-- JavaScript -->
+<!-- JavaScript -- >
 <script>
   function loadCinema(url) {
     document.getElementById('cinemaPlayer').src = url;
   }
 </script>
 
-<!-- Styling -->
+<!-- Styling -- >
 <style>
   .cinema-btn {
     background: rgba(255, 87, 51, 0.1);
@@ -475,7 +526,7 @@ function closeFullscreen() {
 
 </div>
 </div>
-
+-->
 
 <!-- SITE MAP -->
 <button class="accordion2">4U MEDIA</button>
@@ -1486,24 +1537,119 @@ for (i = 0; i < acc.length; i++) {
 <!--  //////////////////////////////////////////// -->
   </div>
   <!-- Contact Section -->
-<!--  
-  <div class="w3-padding-64 w3-content w3-text-grey" id="contact">
-    <h2 class="w3-text-light-grey">-</h2>
-    <hr style="width:200px" class="w3-opacity">
-  </div>
--->  
-      
-<footer class="footer">
-<div class="footer-bg"><div>
-<link href='https://fonts.googleapis.com/css?family=Audiowide' rel='stylesheet'><h1 class="footer-title" style="font-family: 'Audiowide';text-decoration: none;color:white;">AlphaPi</h1><span class="footer-subtitle">Connect. Code. Create</span><br><br></div>
-Made with ❤️ & curiosity<p class="footer-copy">  <i class="fa fa-creative-commons"></i> <a href="https://alexandroshub.github.io/welcome21.html" title="Visit AlexandrosHub">▞▚ ▛ AlexandrosHub</a> | <a href="https://alexandroshub.github.io/about">Privacy Statement & Terms of Use</a> | <a href="https://alexandroshub.github.io/ap.contact.html">Contact</a> | <a href="https://www.facebook.com/alexandroshub/"><i class="fa fa-facebook-official w3-hover-opacity"></i></a> | <a href=" https://www.instagram.com/alexandroshub/"><i class="fa fa-instagram w3-hover-opacity"></i></a></p> 
-<p style="font-size: 9px; color:#9CA5AC">        
-<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha256-3dkvEK0WLHRJ7/Csr0BZjAWxERc5WH7bdeUya2aXxdU= sha512-+L4yy6FRcDGbXJ9mPG8MT/3UCDzwR9gPeyFNMCtInsol++5m3bk2bXWKdZjvybmohrAsn3Ua5x8gfLnbE1YkOg==" crossorigin="anonymous"/> </p>     
 
-
-</div></footer>
-      
 <!-- END PAGE CONTENT -->
+<link href='https://fonts.googleapis.com/css?family=Audiowide' rel='stylesheet'>
+<style>
+/* Frames footer – minimal, semantic, and responsive */
+/* Font stack mirrors common system UI sans defaults used on modern landing pages */
+:root {
+  --footer-bg: #000;        /* deep near-black 0b0b10 */
+  --footer-fg: #e6e7eb;        /* high-contrast text */
+  --footer-muted: #9aa0a6;     /* subdued secondary text */
+  --footer-link: #cfd3d8;      /* link default */
+  --footer-link-hover: #ffffff;
+  --container-max: 1200px;
+}
+
+.frames-footer {
+  background: var(--footer-bg);
+  border-top: 1px solid rgba(255, 255, 255, 0.06);
+}
+
+.frames-footer__container {
+  max-width: var(--container-max);
+  margin: 0 auto;
+  padding: 24px 20px 48px; /* p-5 pb-10 equivalent */
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+@media (min-width: 768px) {
+  .frames-footer__container {
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: flex-start;
+  }
+}
+
+/* Brand */
+.frames-footer__brand {
+  min-width: 100px;
+  color: var(--footer-fg);
+/*   text-transform: uppercase; */
+  font-weight: 700;
+  font-size: 1.5rem; /* text-2xl */
+  line-height: 1.2;
+  letter-spacing: 0.03em;
+  margin: 0;
+  font-family: Audiowide, ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Inter, "Helvetica Neue", Arial, "Noto Sans", "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+}
+
+/* Right side block */
+.frames-footer__links {
+  display: flex;
+  flex-direction: column;
+  gap: 6px;
+  color: var(--footer-fg);
+  font-family: ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Inter, "Helvetica Neue", Arial, "Noto Sans";
+}
+
+.frames-footer__rights {
+  margin: 0;
+  color: var(--footer-muted);
+  font-size: 0.95rem;
+}
+
+/* Nav links */
+.frames-footer__nav {
+  display: inline-flex;
+  align-items: center;
+  gap: 8px;
+  flex-wrap: wrap;
+}
+
+.frames-footer__link {
+  font-size: 0.75rem; /* text-xs */
+  color: var(--footer-link);
+  text-decoration: none;
+  transition: color 180ms ease, opacity 180ms ease;
+  opacity: 0.9;
+}
+
+.frames-footer__link:hover {
+  color: var(--footer-link-hover);
+  opacity: 1;
+}
+
+.frames-footer__sep {
+  color: var(--footer-muted);
+  font-size: 0.9rem;
+  padding: 0 2px;
+}
+
+</style>
+
+
+<!-- Footer -->
+<footer class="frames-footer">
+  <div class="frames-footer__container">
+    <h1 class="frames-footer__brand">AlphaPi</h1>
+
+    <div class="frames-footer__links">
+      <p class="frames-footer__rights">All rights reserved</p>
+      <nav class="frames-footer__nav" aria-label="Footer">
+        <a href="https://alexandroshub.github.io/about" target="_blank" class="frames-footer__link">Terms of service</a>
+        <span class="frames-footer__sep" aria-hidden="true">|</span>
+        <a href="https://alexandroshub.github.io/ap.contact.html" target="_blank" class="frames-footer__link">Contact</a>
+        <span class="frames-footer__sep" aria-hidden="true">|</span>
+        <a href="https://alexandroshub.github.io/welcome21.html" target="_blank" class="frames-footer__link">▞▚ ▛</a>
+      </nav>
+    </div>
+  </div>
+</footer>
+
 
 </body>
 </html>
