Rename ALIEN V3 to NEO V3 in version.html

--- a/version.html
+++ b/version.html
@@ -1,5 +1,6 @@
 
 
+
 <!-- SpecialPage version v.alien3 + icon
 
   ░█▀▀█ ░░ ▒█▀▀█ █▀▀█ █▀▀█ █▀▀█ █▀▀ █▀▀█ █░░█ █▀▀█ █▀▀█ █░░█ 
@@ -29,7 +30,7 @@
     background-repeat: no-repeat;
     background-size: cover;
     background-image: linear-gradient(to right, rgba(255, 0, 0, 0), rgba(0, 0, 0, 1)),
-    url('https://images2.alphacoders.com/853/thumb-1920-85302.jpg');    
+    url('https://preview.redd.it/neo-sleeping-at-his-desk-v0-ebpofutbqznd1.jpeg?auto=webp&s=c7e2cf9bb15f03230d3fb623448fe93cc4972943');    
     min-height: 100%;
     }
   </style>
@@ -101,7 +102,7 @@
 </style>
 
 <div class="alien-bg">
-  <div class="alien-title">ALIEN*3</div>
+  <div class="alien-title">NEO</div>
 </div>
 
 </div>     
@@ -163,10 +164,10 @@
 </style>
 
 <div class="alien-v2">
-  <h2>🛸 ALIEN V3</h2>
+  <h2>NEO V3</h2>
   <h3>Design & Content από άλλο πλανήτη 🚀</h3>
   <p>
-    Η νέα έκδοση της ιστοσελίδας δεν είναι απλώς ένα update. Είναι ένα <strong>τεχνολογικό άλμα</strong>. Με ανασχεδιασμένο UI/UX, βελτιστοποιημένο κώδικα και περιεχόμενο που δεν μοιάζει με τίποτα άλλο εκεί έξω, το <strong>ALIEN V3 (2025)</strong> προσγειώνεται με στόχο να καθηλώσει.
+    Η νέα έκδοση της ιστοσελίδας δεν είναι απλώς ένα update. Είναι ένα <strong>τεχνολογικό άλμα</strong>. Με ανασχεδιασμένο UI/UX, βελτιστοποιημένο κώδικα και περιεχόμενο που δεν μοιάζει με τίποτα άλλο εκεί έξω, το <strong>NEO V3 (2025)</strong> προσγειώνεται με στόχο να καθηλώσει.
   </p>
   <p>
     🔧 <strong>Ανασχεδιασμός από το μηδέν</strong><br>
@@ -182,10 +183,10 @@
     🧪 Η σελίδα αξιολογείται εσωτερικά σε τακτά χρονικά διαστήματα με πληθώρα εργαλείων, και στην επόμενη έκδοση (V3) θα προστεθεί δυναμική απεικόνιση των μετρήσεων για SEO, ασφάλεια, προσβασιμότητα και απόδοση.
   </p>
   <p>
-    📊 Μέχρι στιγμής, η παρουσίαση είναι εξαιρετική σε τεχνικά metrics, ενώ η αισθητική και η εμπειρία χρήστη <strong>βελτιώνονται συνεχώς</strong>. Κάθε νέα έκδοση είναι ένα βήμα πιο κοντά στο ιδανικό: περισσότερη ποιότητα, περισσότερη ουσία, περισσότερη <strong>ALIEN</strong> ενέργεια.
+    📊 Μέχρι στιγμής, η παρουσίαση είναι εξαιρετική σε τεχνικά metrics, ενώ η αισθητική και η εμπειρία χρήστη <strong>βελτιώνονται συνεχώς</strong>. Κάθε νέα έκδοση είναι ένα βήμα πιο κοντά στο ιδανικό: περισσότερη ποιότητα, περισσότερη ουσία, περισσότερη <strong>NEO</strong> ενέργεια.
   </p>
   <p>
-    ✨ <strong>Απολαύστε την περιήγησή σας. Η εμπειρία είναι... εξωγήινη.</strong>
+    ✨ <strong>Απολαύστε την περιήγησή σας.</strong>
   </p>
 </div>
 
