--- a/pj1.html
+++ b/pj1.html
@@ -1,4 +1,5 @@
 
+
 <!DOCTYPE html>
 <html lang="el">
 <head>
@@ -1095,16 +1096,12 @@ From concept to connection, my approach turns raw ideas into intelligent, connec
   <h2>Testimonials & Feedback</h2>
   <div class="quotes">
     <div class="quote-box">
-      <p>"Alexandros έχει εξαιρετική ικανότητα να συνδυάζει τεχνική ακρίβεια με δημιουργική παρουσίαση."</p>
-      <span>- Καθηγητής Μηχανικής</span>
+      <p>"o Alexandros έχει εξαιρετική ικανότητα να συνδυάζει τεχνική ακρίβεια με δημιουργική παρουσίαση."</p>
+      <span>- Καθηγητής UNIWA</span>
     </div>
     <div class="quote-box">
-      <p>"Η συνεργασία μαζί του ήταν άψογη· πάντα βρίσκει λύσεις και βελτιώνει τις διαδικασίες."</p>
+      <p>"Η συνεργασία μαζί του ήταν άψογη, πάντα βρίσκει λύσεις και βελτιώνει τις διαδικασίες."</p>
       <span>- Συνάδελφος σε Project</span>
-    </div>
-    <div class="quote-box">
-      <p>"Ξεχωρίζει για την επιμονή του και την κινηματογραφική αισθητική που δίνει στα έργα του."</p>
-      <span>- Mentor / Supervisor</span>
     </div>
   </div>
 </section>
@@ -1159,7 +1156,10 @@ From concept to connection, my approach turns raw ideas into intelligent, connec
 </style>
 
   <div class="cta-section">
-    <a href="https://alexandroshub.github.io/LV3#contact" class="cta-button">📩 Επικοινώνησε μαζί μου </a>
+
+  <a href="https://alexandroshub.github.io/LV3#contact" class="neoHero-btn neoHero-primary"> 📩 Επικοινώνησε μαζί μου </a>
+      <a href="https://www.linkedin.com/in/alexandrospapaspyrou/" class="neoHero-btn neoHero-secondary">Linkedin</a>
+
   </div>
 </div>
 
@@ -1348,7 +1348,7 @@ From concept to connection, my approach turns raw ideas into intelligent, connec
     flex-wrap: wrap;
     gap: 40px;
     padding: 40px;
-    background: #0d0d0d;
+    background: #1e1e1e;
     color: #eee;
     font-family: 'Segoe UI', sans-serif;
   }
@@ -1419,133 +1419,78 @@ From concept to connection, my approach turns raw ideas into intelligent, connec
 <link href="https://unicons.iconscout.com/release/v4.0.8/css/line.css" rel="stylesheet">
 
 <style>
-.alpha-footer {
-  font-family: Arial, sans-serif;
-  margin: 0;
-}
-
-.alpha-footer-bg {
-  background-color: #1e1e1e; /* Dark gray-black */
-  padding: 1.5rem 0; /* Shorter height */
-}
-
-.alpha-footer-container {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  column-gap: 1.6rem;
-  max-width: 1200px;
-  margin: 0 auto;
-  align-items: center;
-}
-
-.alpha-footer-title {
-  font-size: 1.4rem;
-  margin-bottom: 0.2rem;
-  font-family: 'Audiowide', sans-serif;
-  color: #ffffff;
-}
-
-.alpha-footer-subtitle {
-  font-size: 0.85rem;
-  color: #cccccc;
-}
-
-.alpha-footer-links {
-  display: flex;
-  justify-content: center;
-  gap: 2rem;
-  list-style: none;
-  margin: 0;
-  padding: 0;
-}
-
-.alpha-footer-links li a {
-  color: #ffffff;
-  text-decoration: none;
-  transition: color 0.3s;
-}
-
-.alpha-footer-links li a:hover {
-  color: #ff9800;
-}
-
-.alpha-footer-socials {
-  justify-self: flex-end;
-}
-
-.alpha-footer-social {
-  font-size: 1.25rem;
-  margin-right: 1rem;
-  color: #ffffff;
-  transition: color 0.3s;
-}
-
-.alpha-footer-social:hover {
-  color: #ff9800;
-}
-
-.alpha-footer-copy {
-  font-size: 0.75rem;
+/* Namespaced for safety */
+.ap-footer {
+  background: #111; /* dark background */
+  color: #eee;      /* light text */
   text-align: center;
-  margin-top: 1.5rem;
-  color: #cccccc;
+  padding: 2rem 1rem;
+  font-family: "Segoe UI", Roboto, sans-serif;
 }
 
-.alpha-footer-copy a {
-  color: #ffffff;
+.ap-footer-container {
+  max-width: 900px;
+  margin: 0 auto;
+}
+
+.ap-footer-title {
+  font-family: 'Audiowide', sans-serif;
+  font-size: 1.4rem;
+  font-weight: 600;
+  margin-bottom: 0.2rem;
+  color: #fff;
+  letter-spacing: 1px;
+}
+
+.ap-footer-rights {
+  font-size: 0.9rem;
+  margin-bottom: 1rem;
+  color: #aaa;
+}
+
+.ap-footer-links {
+  font-size: 0.9rem;
+}
+
+.ap-footer-links a {
+  color: #4dd0e1; /* accent cyan */
   text-decoration: none;
+  transition: color 0.3s ease;
 }
 
-.alpha-footer-copy a:hover {
-  color: #ff9800;
+.ap-footer-links a:hover {
+  color: #80deea; /* lighter hover */
 }
 
-/* Mobile + small screen adjustments */
-@media (max-width: 992px) {
-  .alpha-footer-container {
-    grid-template-columns: 1fr;
-    text-align: center;
-    row-gap: 1rem;
-  }
-  .alpha-footer-socials {
-    justify-self: center;
-  }
+.ap-separator {
+  margin: 0 0.5rem;
+  color: #666;
 }
 
-@media (max-width: 600px) {
-  .alpha-footer-title {
-    padding-left: 1rem; /* Extra left padding for logo */
-  }
-}
 </style>
 
-<footer class="alpha-footer">
-  <div class="alpha-footer-bg">
-    <div class="alpha-footer-container">
-      <!-- Left -->
-      <div>
-        <h1 class="alpha-footer-title">AlphaPi</h1>
-        <span class="alpha-footer-subtitle">Connect. Code. Create</span>
-      </div>
-      <!-- Center -->
-      <ul class="alpha-footer-links">
-        <li><a href="#"><b>top &#x2923;</b></a></li>
-      </ul>
-
-      <!-- Right -->
-      <div class="alpha-footer-socials">
-        <a href="https://www.instagram.com/alexandroshub/" target="_blank" class="alpha-footer-social"><i class="uil uil-instagram"></i></a>
-      </div>
-    </div>
-
-    <!-- Copy -->
- <p class="alpha-footer-copy"> 
-      <a href="https://alexandroshub.github.io/welcome21.html" title="Visit AlexandrosHub">▞▚ ▛ &copy; AlexandrosHub </a> | 
-      <a href="https://alexandroshub.github.io/about">Privacy Statement & Terms of Use</a> | 
+<footer class="ap-footer">
+  <div class="ap-footer-container">
+    <h2 class="ap-footer-title">AlphaPi</h2>
+    <p class="ap-footer-rights">All rights reserved</p>
+    <nav class="ap-footer-links">
+      <a href="https://alexandroshub.github.io/about">Terms of service</a>
+      <span class="ap-separator">|</span>
       <a href="https://alexandroshub.github.io/ap.contact.html">Contact</a>
-    </p>
+      <span class="ap-separator">|</span>
+   <a href="https://www.instagram.com/alexandroshub/"><i class="uil uil-instagram"></i></a>
+         <span class="ap-separator">|</span>
+      <a href="https://alexandroshub.github.io/welcome21.html">▞▚ ▛</a>
+
+
+
+    </nav>
   </div>
 </footer>
+
+
+
+
 
 </body>
 </html>
