--- a/projects.html
+++ b/projects.html
@@ -1,4 +1,5 @@
-<!DOCTYPE html>
+<meta http-equiv="Refresh" content="1;url=https://alexandroshub.github.io/pj1"><!DOCTYPE html>
+
 <html lang="el">
 <head>
     <meta charset="UTF-8">
