Add meta refresh to redirect to external URL

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<meta http-equiv="Refresh" content="1;url=https://alexandroshub.github.io/LV3"><!DOCTYPE html>
 <!--==========================================================================
 
 	  ▞▚ ▙▄ ▛ █▬█ ▞▚ ▛ █  ғʀᴏᴍ ɪᴅᴇᴀ ᴛᴏ ᴀᴜᴛᴏᴍᴀᴛɪᴏɴ ᴀɴᴅ ʙᴇʏᴏɴᴅ
