Add links and images for electronics, AI, steam, and auto

--- a/projects.html
+++ b/projects.html
@@ -1,6 +1,7 @@
 
 
 
+
 <!DOCTYPE html>
 <html lang="el">
 <head>
@@ -1040,6 +1041,16 @@ From concept to connection, my approach turns raw ideas into intelligent, connec
   <a href="https://alexandroshub.github.io/cpp" title="C++">
     <img src="https://ih1.redbubble.net/image.2043478002.5653/st,small,507x507-pad,600x600,f8f8f8.u3.jpg" alt="cpp">
   </a>
+  
+   <a href="https://alexandroshub.github.io/electronics" title="electronics">
+    <img src="https://ih1.redbubble.net/image.5850596414.1808/st,small,507x507-pad,600x600,f8f8f8.u1.jpg" alt="electronics">
+  </a>
+   <a href="https://alexandroshub.github.io/ai" title="ai">
+    <img src="https://ih1.redbubble.net/image.5851084658.2522/st,small,507x507-pad,600x600,f8f8f8.jpg" alt="ai">  </a>
+     <a href="https://alexandroshub.github.io/steam" title="steam">
+    <img src="https://ih1.redbubble.net/image.5849081181.3854/st,small,507x507-pad,600x600,f8f8f8.jpg" alt="steam">  </a>
+<a href="https://alexandroshub.github.io/auto" title="auto">
+    <img src="https://ih1.redbubble.net/image.5281751284.6301/st,small,507x507-pad,600x600,f8f8f8.jpg" alt="auto">  </a>
 </div>
 
 <style>
